--- a/midterm/index.html
+++ b/midterm/index.html
@@ -95,8 +95,7 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
           </div>
-
-      <h3 style="text-align:center">What Zodiac Sign Are You?</h3>
+        <h3 style="text-align:center">What Zodiac Sign Are You?</h3>
         <div class="row">
           <div class="column">
             <div class="card">
@@ -135,7 +134,7 @@
           </div>
         </div>
 
-      <h2 style="text-align:center">_</h2>
+        <h2 style="text-align:center">_</h2>
         <div class="row">
           <div class="column">
             <div class="card">
@@ -174,82 +173,93 @@
         </div>
 
         <h2 style="text-align:center">_</h2>
-          <div class="row">
-            <div class="column">
-              <div class="card">
-                <img src="img/libra1.png" alt="Jane" style="width:100%">
-                <div class="container">
-                  <h2>Libra</h2>
-                  <p class="title">JUN 21 - JUL 22</p>
-                  <p>Cancer takes the responsibilities of nurturer, host, protector, and carer very seriously. Those born with the Crab as a significant sign in their horoscopes are preoccupied with establishing and preserving familial relationships. By nature, they are sensitive, emotional, and home-loving.</p>
-                  <p><button onclick="alert('Cancers key qualities are their caring, compassionate, and sensitive natures. They can be depended on to feed and care for friends, family, and any weary traveler who stays in their house, as they are always ready to welcome and prepare a table.')">Traits</button></p>
-                </div>
+        <div class="row">
+          <div class="column">
+            <div class="card">
+              <img src="img/libra1.png" alt="Jane" style="width:100%">
+              <div class="container">
+                <h2>Libra</h2>
+                <p class="title">SEP 23 - OCT 22</p>
+                <p><button id="myBtn">Traits</button></p>
+                  <div id="myModal" class="modal">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <span class="close">&times;</span>
+                        <h2>Symbol: Balance</h2>
+                      </div>
+                      <div class="modal-body">
+                        <p>Overall Libra is the seventh sign of the zodiac, the last six zodiac signs focus on the individual’s contact with others and with the world. The Libra zodiac sign is first and foremost focused on others and how they relate to them. We can call this the sign of Partnership with a capital ‘P’ because these folks do not want to be alone.</p>
+                        <p>Pros Librs embody loving, healing and balancing traits. Not likely to hold grudges, they typically assume the best intention in others and give people many chances to redeem themselves. Usually maintain poise, grace, and charm.</p>
+                        <p>Cons Libras do not like confrontation or discomfort. For the sake of peacekeeping, they will not express their anger or discomfort, but if they are not careful, this can lead to suppressed emotions that can solidify into resentment. Later on, this resentment may come out in unusual ways, as Libra’s Venusian tendency to focus only on the good and pleasant will put their more uncomfortable feelings off of their radar.</p>
+                      </div>
+                    </div>
+                  </div>
               </div>
             </div>
-
-            <div class="column">
-              <div class="card">
-                <img src="img/scorpio1.png" alt="Mike" style="width:100%">
-                <div class="container">
-                  <h2>Scorpio</h2>
-                  <p class="title">JUL 23 - AUG 22</p>
-                  <p>Leo is the zodiac's fifth sign. These people are tough to overlook since they enjoy being in the spotlight. Making an impression is Job #1 for Leos, and given their personal appeal, it's a relatively simple task. Leos are a determined bunch, and their determination helps them to accomplish a lot.</p>
-                  <p><button onclick="alert('Leos have a strong sense of pride and loyalty, and if you allow them to shine in your world and shower them with praise and admiration, they will become lifelong friends. They tend to perceive their friends and loved ones through the same lens since they are so confident and optimistic themselves, promoting their skills and self-confidence.')">Traits</button></p>
-                </div>
+          </div>
+          <div class="column">
+            <div class="card">
+              <img src="img/scorpio1.png" alt="Mike" style="width:100%">
+              <div class="container">
+                <h2>Scorpio</h2>
+                <p class="title">OCT 23 - NOV 21</p>
+                <p>Scorpio is the eighth sign of the zodiac,Those born under this sign are dead serious in their mission to learn about others. They travel in a world that’s black and white and has little use for gray. Very curious and usually are the investigators and love to probe and know how to get to the bottom of things.</p>
+                <p><button onclick="alert('Known for being devoted, determined, and observant. Scorpios tend to be receptive and patient, letting others play their cards and show their intentions first to better understand emotional and psychological dynamics of their relationships. They passionately bond themselves, heart and soul, to those they care for. Once they feel they can trust, they are quite loyal to their friends and lovers.')">Traits</button></p>
               </div>
-            </div>
-
-            <div class="column">
-              <div class="card">
-                <img src="img/sagittarius1.png" alt="John" style="width:100%">
-                <div class="container">
-                  <h2>Sagittarius</h2>
-                  <p class="title">AUG 23 - SEP 22</p>
-                  <p>Those with the Virgin as a dominant sign in their horoscopes excel at devoting themselves to undertakings and relationships that require some tender loving care, mending, and tending in order to restore their health, purity, and natural function.</p>
-                  <p><button onclick="alert('Mental agility, flexibility, and a competent, precise temperament are the key Virgo qualities. These people are meticulous and attentive, and they think clearly, learn rapidly, and find great joy in serving, healing, and bringing order, precision, and pragmatism to their surroundings.')">Traits</button></p>
-                </div>
             </div>
           </div>
 
-            <h2 style="text-align:center">_</h2>
-              <div class="row">
-                <div class="column">
-                  <div class="card">
-                    <img src="img/capricorn1.png" alt="Jane" style="width:100%">
-                    <div class="container">
-                      <h2>Capricorn</h2>
-                      <p class="title">JUN 21 - JUL 22</p>
-                      <p>Cancer takes the responsibilities of nurturer, host, protector, and carer very seriously. Those born with the Crab as a significant sign in their horoscopes are preoccupied with establishing and preserving familial relationships. By nature, they are sensitive, emotional, and home-loving.</p>
-                      <p><button onclick="alert('Cancers key qualities are their caring, compassionate, and sensitive natures. They can be depended on to feed and care for friends, family, and any weary traveler who stays in their house, as they are always ready to welcome and prepare a table.')">Traits</button></p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="column">
-                  <div class="card">
-                    <img src="img/aquarius1.png" alt="Mike" style="width:100%">
-                    <div class="container">
-                      <h2>Aquarius</h2>
-                      <p class="title">JUL 23 - AUG 22</p>
-                      <p>Leo is the zodiac's fifth sign. These people are tough to overlook since they enjoy being in the spotlight. Making an impression is Job #1 for Leos, and given their personal appeal, it's a relatively simple task. Leos are a determined bunch, and their determination helps them to accomplish a lot.</p>
-                      <p><button onclick="alert('Leos have a strong sense of pride and loyalty, and if you allow them to shine in your world and shower them with praise and admiration, they will become lifelong friends. They tend to perceive their friends and loved ones through the same lens since they are so confident and optimistic themselves, promoting their skills and self-confidence.')">Traits</button></p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="column">
-                  <div class="card">
-                    <img src="img/pisces1.png" alt="John" style="width:100%">
-                    <div class="container">
-                      <h2>Pisces</h2>
-                      <p class="title">AUG 23 - SEP 22</p>
-                      <p>Those with the Virgin as a dominant sign in their horoscopes excel at devoting themselves to undertakings and relationships that require some tender loving care, mending, and tending in order to restore their health, purity, and natural function.</p>
-                      <p><button onclick="alert('Mental agility, flexibility, and a competent, precise temperament are the key Virgo qualities. These people are meticulous and attentive, and they think clearly, learn rapidly, and find great joy in serving, healing, and bringing order, precision, and pragmatism to their surroundings.')">Traits</button></p>
-                    </div>
-                </div>
+          <div class="column">
+            <div class="card">
+              <img src="img/sagittarius1.png" alt="John" style="width:100%">
+              <div class="container">
+                <h2>Sagittarius</h2>
+                <p class="title">NOV 22 - DEC 21</p>
+                <p>Sagittarius, the ninth sign of the zodiac, Sags are truth-seekers, and the best way for them to do this is to hit the road, talk to others and get some answers. At the end of the day, what Sagittarius wants most is to know the meaning of life, and to accomplish this while feeling free and easy.</p>
+                <p><button onclick="alert('Primary strength is optimism, Sags usually find it easy to feel happy, enthusiastic, and to see the bright side of life. Rarely succumb to self-doubt and are usually able to propel themselves forward in life believing everything will work out for the best. Typically wonderful storytellers and great teachers putting universal messages of truth and inspiration into their lessons.')">Traits</button></p>
               </div>
+          </div>
+        </div>
+
+        <h2 style="text-align:center">_</h2>
+        <div class="row">
+          <div class="column">
+            <div class="card">
+              <img src="img/capricorn1.png" alt="Jane" style="width:100%">
+              <div class="container">
+                <h2>Capricorn</h2>
+                <p class="title">DEC 22 - JAN 19</p>
+                <p>Capricorns are the teeth signs and mountain goats of the zodiac. They are all about hard work and are more than happy to put in a full day at the office realizing it will take a lot to get to the top. Capricorns are practical and take things one step at a time while being as realistic.</p>
+                <p><button onclick="alert('Capricorns are extremely dedicated to their goals almost to the point of stubbornness. They are down to earth and have strong powers of discernment. Very loyal to others but should never be crossed. Known for their enduring beauty and classic elegance. Capricorns are born with the weight of the world on their shoulders and gradually learn to let go over the years.')">Traits</button></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div class="card">
+              <img src="img/aquarius1.png" alt="Mike" style="width:100%">
+              <div class="container">
+                <h2>Aquarius</h2>
+                <p class="title">JAN 20 - FEB 18</p>
+                <p>Aquarius is the eleventh sign of the zodiac. Those of the Aquarius zodiac sign are humanitarian, philanthropic, and keenly interested in making the world a better place. They are visionaries, progressive souls who love to spend time thinking about how things can be better.</p>
+                <p><button onclick="alert('Aquarius are known for their intelligence and their ability to not let anything block their fresh perspective. Have an affinity for abstract thought that allows them to examine problems and innovate new solutions. Typically good judges of character and dependable when rationality is needed. Aquarians are known for their cleverness and dry wit, which may be surprising in spite of their cool and collected exterior.')">Traits</button></p>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div class="card">
+              <img src="img/pisces1.png" alt="John" style="width:100%">
+              <div class="container">
+                <h2>Pisces</h2>
+                <p class="title">Feb 19 - Mar 20</p>
+                <p>Pisces is the twelfth sign of the zodiac, they are selfless, spiritual, and very focused on their inner journey. They also place great weight on what they are feeling.</p>
+                <p><button onclick="alert('Pisces are naturally compassionate and empathetic, they are wired to offer spiritual and artistic gifts to the world. They are often poets, musicians, painters, and counselors in our communities. Can be counted on to offer help and healing support to anyone who is in need. When in love they will give much of themselves to their friends and partners to selflessly nurture a connection.')">Traits</button></p>
+          </div>
+        </div>
+      </div>
       </main>
-</body>
+
   <!---  <section class="container">
        <!-- title -->
       <!--- <div class="title">
