--- a/midterm/index.html
+++ b/midterm/index.html
@@ -61,26 +61,31 @@
             <div class="mySlides fade">
               <div class="numbertext">3 / 3</div>
               <img src="img/scorpio1.png" style="width:40%">
+              <div class="text">Caption Three</div>
             </div>
 
             <div class="mySlides fade">
               <div class="numbertext">3 / 3</div>
               <img src="img/sagittarius1.png" style="width:40%">
+              <div class="text">Caption Three</div>
             </div>
 
             <div class="mySlides fade">
               <div class="numbertext">3 / 3</div>
               <img src="img/capricorn1.png" style="width:40%">
+              <div class="text">Caption Three</div>
             </div>
 
             <div class="mySlides fade">
               <div class="numbertext">3 / 3</div>
               <img src="img/aquarius1.png" style="width:40%">
+              <div class="text">Caption Three</div>
             </div>
 
             <div class="mySlides fade">
               <div class="numbertext">3 / 3</div>
               <img src="img/pisces1.png" style="width:40%">
+              <div class="text">Caption Three</div>
             </div>
 
             <!-- Next and previous buttons -->
@@ -180,20 +185,8 @@
               <div class="container">
                 <h2>Libra</h2>
                 <p class="title">SEP 23 - OCT 22</p>
-                <p><button id="myBtn">Traits</button></p>
-                  <div id="myModal" class="modal">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <span class="close">&times;</span>
-                        <h2>Symbol: Balance</h2>
-                      </div>
-                      <div class="modal-body">
-                        <p>Overall Libra is the seventh sign of the zodiac, the last six zodiac signs focus on the individual’s contact with others and with the world. The Libra zodiac sign is first and foremost focused on others and how they relate to them. We can call this the sign of Partnership with a capital ‘P’ because these folks do not want to be alone.</p>
-                        <p>Pros Librs embody loving, healing and balancing traits. Not likely to hold grudges, they typically assume the best intention in others and give people many chances to redeem themselves. Usually maintain poise, grace, and charm.</p>
-                        <p>Cons Libras do not like confrontation or discomfort. For the sake of peacekeeping, they will not express their anger or discomfort, but if they are not careful, this can lead to suppressed emotions that can solidify into resentment. Later on, this resentment may come out in unusual ways, as Libra’s Venusian tendency to focus only on the good and pleasant will put their more uncomfortable feelings off of their radar.</p>
-                      </div>
-                    </div>
-                  </div>
+                <p>Libra is the seventh sign of the zodiac, the last six zodiac signs focus on the individual’s contact with others and with the world. The Libra zodiac sign is first and foremost focused on others and how they relate to them.</p>
+                <p><button onclick="alert('Libras embody loving, healing and balancing traits. Not likely to hold grudges, they typically assume the best intention in others and give people many chances to redeem themselves. Usually maintain poise, grace, and charm.')">Traits</button></p>
               </div>
             </div>
           </div>
