--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<li><a href="lab19/index.html">Lab 19: AJAX</a></li>
 			<li><a href="lab20/index.html">Lab 20: JSON and APIs</a></li>
 			<li><a href="lab21/index.html">Lab 21: Git and Github for Groups</a></li>
-			<li><a href="Midterm/index.html">Midterm</a></li>
+			<li><a href="midterm/index.html">Midterm</a></li>
 		</ul>
 		</div>
 
