--- a/lab19/index.html
+++ b/lab19/index.html
@@ -13,15 +13,22 @@
           <p>Experimenting with jQuery and AJAX with a partner.</p>
 
           <h3>Challenges</h3>
-          <p></p>
+          <p>I experienced no challenges with this lab.</p>
 
           <h3>Problems</h3>
-          <p></p>
+          <p>There were a few probelsm with my js code but was able to work around it.</p>
 
           <h3>Results</h3>
-          <p></p>
-        </div>
+          <p>Had no further issues with this lab, everything was a success.</p>
+
+          <button id="activate">Click me!</button>
 
 
+        <nav>
+           <ul>
+             <li><a href="../index.html">CST252 Homepage</a></li>
+            <li><a class = "sourcelink" href = "js/lab.js" target = "source">JavaScript Source &gt;&gt</a></li>
+           </nav>
+         </div>
 
   </body>
