--- a/midterm/index.html
+++ b/midterm/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+-<!DOCTYPE html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/lab.css">
@@ -281,7 +281,7 @@
            </button>
          </div>
          <!-- random button -->
-         <!--<<button class="random-btn">surprise me</button>
-       </article>
-     </section>
+         <!---<button class="random-btn">surprise me</button>
+       <!---</article>-->
+    <!--- </section>-->
  </body>
