--- a/lab20/index.html
+++ b/lab20/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lab 20: JSON and APIs (XKCD comic!)</title>
-      <link rel="stylesheet" type="text/css" href="css/lab.css">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Glory">
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-      <script src="js/lab.js" defer></script>
-  </head>
-  <body>
-    <div id="output">
-          <h1>Lab 20: JSON and APIs</h1>
-          <p>Processing JSON from an API with a partner.</p>
-
-          <h3>Challenges</h3>
-          <p></p>
-
-          <h3>Problems</h3>
-          <p></p>
-
-          <h3>Results</h3>
-          <p></p>
-
-        <nav>
-           <ul>
-             <li><a href="../index.html">CST252 Homepage</a></li>
-            <li><a class = "sourcelink" href = "js/lab.js" target = "source">JavaScript Source &gt;&gt</a></li>
-           </nav>
-         </div>
-
-  </body>
+<html>
+<head>
+    <title>Lab 20 - JSON & APIs</title>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"></script>
+    <script src="js/index.js" defer></script>
+    <link rel="stylesheet" href="../css/site.css">
+    <link rel="stylesheet" href="css/lab.css">
+</head>
+<body>
+  <main id=content>
+    <section class="intro">
+        <h1>Lab 20 - JSON & APIs</h1>
+        <p>Working with your partner, experiment with APIs and JSON.</p>
+    </section>
+    <section class="challenges">
+        <h2>Challenges</h2>
+        <p>I had to experiment a bit to get document.write() to work. I had some problems with styling, but I solved these by messing experimenting in the Inspector. When I got it right, I copy and pasted into my stylesheet.</p>
+    </section>
+    <section class="results">
+        <h2>Results</h2>
+        <p>Well you are looking at the index.html file I created. Here is the program execution:</p>
+        <h3>Script Output</h3>
+        <div class=output>
+            <script type="text/javascript" src="js/lab5.js"></script>
+        </div>
+    </section>
+    <div id="output"></div>
+  </main>
+</body>
+</html>
